using testcontaines in dev mode